--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -10,5 +10,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4"
   }
 }
